umami/umami-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    name: umami
  annotations:
    argocd.argoproj.io/sync-wave: "0"
