umami/umami-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami-db
  namespace: umami
  labels:
    app: umami-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami-db
  template:
    metadata:
      labels:
        app: umami-db
    spec:
      containers:
        - image: postgres:18.1-alpine
          name: umami-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: umami-db-data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - umami
                - -d
                - umami
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: umami-db-data
          persistentVolumeClaim:
            claimName: umami-db-data
      restartPolicy: Always
