umami/umami-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-db
  namespace: umami
spec:
  selector:
    app: umami-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
